<resources>
    <string name="app_name">Cryptoconverter</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnComa">,</string>
    <string name="btnCE">CE</string>
    <string name="btnDel">&lt;</string>
    <string name="introPrecio">Enter the unit value in Euros</string>
    <string name="aceptar">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="warnNoCrypto">No Crypto selected</string>
    <string name="comas">You can\'t do this</string>
    <string name="euro" >€</string>
    <string name="edit">Select a crypto to change its value</string>
    <string name="editTitle">Change the values</string>
</resources>